--- a/apps/maximo-extension-ui/package.json
+++ b/apps/maximo-extension-ui/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.0.0",
-    "clsx": "^2.0.0",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,15 +34,15 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.31",
     "shadcn-ui": "^0.6.0",
     "storybook": "^7.6.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
-    "jsdom": "^22.1.0",
-    "@vitejs/plugin-react": "^4.2.0"
+    "vitest": "^0.34.6"
   }
 }
