--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,14 @@ jobs:
         run: make typecheck
       - name: Tests
         run: make test
+
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
+      - run: corepack enable
+      - run: pnpm -C apps/maximo-extension-ui i && pnpm -C apps/maximo-extension-ui build && pnpm -C apps/maximo-extension-ui test
