--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
+      - run: corepack enable
       - uses: pnpm/action-setup@v4
         with:
           version: 9
