--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         python-version: ["3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
+      - run: corepack enable
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
