test(api): cover healthz rate limit info

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ MAXIMO_APIKEY=changeme
 MAXIMO_OS_WORKORDER=WORKORDER
 MAXIMO_OS_ASSET=ASSET
 NEXT_PUBLIC_USE_API=false
+## API configuration
+# Comma-separated list of origins allowed to access the API
+CORS_ORIGINS=
+# Rate limiting settings
+RATE_LIMIT_CAPACITY=10
+RATE_LIMIT_INTERVAL=60
