--- a/apps/maximo-extension-ui/package.json
+++ b/apps/maximo-extension-ui/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "html2canvas": "^1.4.1",
+    "js-yaml": "^4.1.0",
     "jspdf": "^3.0.1",
     "next": "^14.0.0",
     "react": "^18.2.0",
