docs: add pilot and dev env defaults

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ CORS_ORIGINS=
 # Rate limiting settings
 RATE_LIMIT_CAPACITY=10
 RATE_LIMIT_INTERVAL=60
+AUTH_REQUIRED=false
+AUTH_TOKEN=devtoken
+NEXT_PUBLIC_API_BASE=http://localhost:8000
+NEXT_PUBLIC_API_TOKEN=devtoken
