--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .[dev]
           pre-commit install
+      - name: Dependency vulnerability scan
+        run: |
+          pip install pip-audit
+          pip-audit
+          pnpm audit --audit-level=high
       - name: Frontend build and test
         run: |
           pnpm -C apps/maximo-extension-ui i
