--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "pydantic",
+    "pydantic-settings",
     "PyYAML",
     "networkx",
     "jinja2",
