Include localhost in CORS

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ NEXT_PUBLIC_ROLE=TEST
 NEXT_PUBLIC_API_BASE=http://localhost:8000
 NEXT_PUBLIC_API_TOKEN=devtoken
 # Comma-separated list of origins allowed to access the API
-CORS_ORIGINS=
+CORS_ORIGINS=http://localhost:3000
 # Rate limiting settings
 RATE_LIMIT_CAPACITY=10
 RATE_LIMIT_INTERVAL=60
