--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -13,4 +13,4 @@ RUN pip install --no-cache-dir -r apps/api/requirements.txt && \
 
 EXPOSE 8000
 
-CMD ["uvicorn", "apps.api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["./apps/api/entrypoint.sh"]
