feat: add jwt auth and login ui

--- a/.env.example
+++ b/.env.example
@@ -31,7 +31,6 @@ HATS_SNAPSHOT_PATH=hats_snapshot.json
 NEXT_PUBLIC_USE_API=false
 NEXT_PUBLIC_ROLE=TEST
 NEXT_PUBLIC_API_BASE=http://localhost:8000
-NEXT_PUBLIC_API_TOKEN=devtoken
 # Comma-separated list of origins allowed to access the API
 CORS_ORIGINS=http://localhost:3000
 # Rate limiting settings
@@ -40,4 +39,5 @@ RATE_LIMIT_INTERVAL=60
 # Authentication
 AUTH_REQUIRED=false
 AUTH_TOKEN=devtoken
+JWT_SECRET=changeme
 
