--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -5,3 +5,6 @@ structlog
 alembic
 pyjwt
 prometheus_client
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
