--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
     ports:
       - "8000:8000"
     env_file: .env.example
+    user: root
+    cap_add:
+      - NET_ADMIN
+    volumes:
+      - ./scripts/restrict-egress.sh:/app/scripts/restrict-egress.sh:ro
+    entrypoint: ["/bin/sh", "/app/scripts/restrict-egress.sh"]
     profiles: ["demo"]
   ui:
     build:
