--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ MAXIMO_APIKEY=changeme
 MAXIMO_OS_WORKORDER=WORKORDER
 MAXIMO_OS_ASSET=ASSET
 NEXT_PUBLIC_USE_API=false
+# Allowed origins for the pilot deployment
+CORS_ORIGINS=http://localhost:3000,https://loto.example.com
