feat: add Sentry error reporting

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ DATA_IN=data/in
 DATA_OUT=data/out
 RULEPACK_FILE=config/hswa_rules_v1.1.yaml
 
+# Sentry error reporting (optional)
+SENTRY_DSN=
+
 # Maximo integration
 MAXIMO_MODE=MOCK
 MAXIMO_BASE_URL=https://example.com
