--- a/prod.env
+++ b/prod.env
@@ -1,3 +1,4 @@
 # Production environment configuration for LOTO Planner
 # Comma-separated list of origins allowed to access the API
 CORS_ORIGINS=https://loto.example.com
+SENTRY_DSN=
