enforce env prerequisites

--- a/.env
+++ b/.env
@@ -3,6 +3,11 @@ MAXIMO_BASE_URL=https://example.com
 MAXIMO_APIKEY=changeme
 MAXIMO_OS_WORKORDER=WORKORDER
 MAXIMO_OS_ASSET=ASSET
+OIDC_CLIENT_ID=your-client-id
+OIDC_CLIENT_SECRET=your-client-secret
+OIDC_ISSUER=https://example.com/
+OIDC_SERVER=https://example.com/
+OIDC_AUDIENCE=your-client-id
 NEXT_PUBLIC_USE_API=false
 # Allowed origins for the pilot deployment
 CORS_ORIGINS=http://localhost:3000,https://loto.example.com
