--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,15 @@ COUPA_APIKEY=changeme
 HATS_LEDGER_PATH=hats_ledger.jsonl
 HATS_SNAPSHOT_PATH=hats_snapshot.json
 
+# OIDC configuration
+OIDC_CLIENT_ID=your-client-id
+OIDC_CLIENT_SECRET=your-client-secret
+OIDC_ISSUER=https://example.com/
+OIDC_SERVER=https://example.com/
+OIDC_AUDIENCE=your-client-id
+OIDC_CACHE_TTL=3600
+PLANNER_EMAIL_DOMAIN=
+
 ## API configuration
 NEXT_PUBLIC_USE_API=false
 NEXT_PUBLIC_ROLE=TEST
