feat: make egress allowlist configurable

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ COUPA_MODE=MOCK
 COUPA_BASE_URL=https://example.com/coupa
 COUPA_APIKEY=changeme
 
+# Outbound egress allowlist (comma-separated hostnames)
+EGRESS_ALLOWED_HOSTS=example.com,coupa.example.com
+
 # HATS configuration
 HATS_LEDGER_PATH=hats_ledger.jsonl
 HATS_SNAPSHOT_PATH=hats_snapshot.json
