--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      VULN_SEVERITY: critical
     strategy:
       matrix:
         python-version: ["3.11", "3.12"]
@@ -31,11 +33,33 @@ jobs:
           pre-commit install
       - name: Pre-commit
         run: pre-commit run --all-files
-      - name: Dependency vulnerability scan
+      - name: Dependency vulnerability scan and SBOM
         run: |
-          pip install pip-audit
-          pip-audit
-          pnpm audit --audit-level=high
+          pip install pip-audit pip-tools
+          pip-audit -r requirements.txt --format cyclonedx-json --output sbom-api.cdx.json
+          python - <<'PY'
+          import json, os, sys
+          order = ["unknown", "none", "low", "medium", "high", "critical"]
+          level = os.environ.get("VULN_SEVERITY", "critical").lower()
+          with open("sbom-api.cdx.json") as fh:
+              data = json.load(fh)
+          for vuln in data.get("vulnerabilities", []):
+              for rating in vuln.get("ratings", []):
+                  sev = rating.get("severity", "").lower()
+                  if sev and order.index(sev) >= order.index(level):
+                      print(f"{vuln.get('id')} severity {sev} meets threshold {level}", file=sys.stderr)
+                      sys.exit(1)
+          PY
+          npm --prefix apps/maximo-extension-ui install --package-lock-only
+          npm --prefix apps/maximo-extension-ui audit --omit dev --audit-level=${VULN_SEVERITY}
+          pnpm -C apps/maximo-extension-ui dlx @cyclonedx/cyclonedx-npm --format json --output-file ../../sbom-ui.cdx.json
+      - name: Upload SBOM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: |
+            sbom-api.cdx.json
+            sbom-ui.cdx.json
       - name: Frontend build and test
         run: |
           pnpm -C apps/maximo-extension-ui build
