--- a/apps/maximo-extension-ui/package.json
+++ b/apps/maximo-extension-ui/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.120.4",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-virtual": "^3.0.0",
     "class-variance-authority": "^0.7.0",
@@ -18,8 +19,8 @@
     "html2canvas": "^1.4.1",
     "js-yaml": "^4.1.0",
     "jspdf": "^3.0.1",
-    "papaparse": "^5.4.1",
     "next": "^14.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.8.0",
@@ -34,8 +35,8 @@
     "@storybook/react-vite": "^7.6.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^20.0.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.0",
