--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,9 +11,15 @@ repos:
     rev: v1.8.0
     hooks:
       - id: mypy
-        additional_dependencies: [types-PyYAML]
+        additional_dependencies: [types-PyYAML, pydantic, fastapi, pydantic-settings, typer]
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v9.33.0
     hooks:
       - id: eslint
-        additional_dependencies: [eslint@9.33.0]
+        additional_dependencies:
+          - eslint@9.33.0
+          - eslint-config-next@14.0.0
+          - eslint-config-prettier@9.0.0
+          - prettier@3.1.0
+          - '@typescript-eslint/eslint-plugin@6.21.0'
+          - '@typescript-eslint/parser@6.21.0'
