--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ target-version = "py311"
 
 [tool.mypy]
 python_version = "3.11"
+strict = true
 ignore_missing_imports = true
 
 [tool.hatch.build.targets.wheel]
