chore: harden Docker builds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,9 @@ services:
     ports:
       - "8000:8000"
     env_file: .env.example
-    user: root
-    cap_add:
-      - NET_ADMIN
-    volumes:
-      - ./scripts/restrict-egress.sh:/app/scripts/restrict-egress.sh:ro
-    entrypoint: ["/bin/sh", "/app/scripts/restrict-egress.sh"]
+    read_only: true
+    tmpfs:
+      - /tmp
     profiles: ["demo"]
   ui:
     build:
@@ -22,12 +19,9 @@ services:
     ports:
       - "3000:3000"
     env_file: .env.example
-    user: root
-    cap_add:
-      - NET_ADMIN
-    volumes:
-      - ./scripts/restrict-egress.sh:/app/scripts/restrict-egress.sh:ro
-    entrypoint: ["/bin/sh", "/app/scripts/restrict-egress.sh"]
+    read_only: true
+    tmpfs:
+      - /tmp
     depends_on:
       - api
     profiles: ["demo"]
