--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,20 +1,35 @@
-FROM python:3.11-slim
+# syntax=docker/dockerfile:1
 
+# Builder stage: install dependencies
+FROM python:3.12-slim AS builder
 WORKDIR /app
 
-# Install application and API dependencies
+# Install application and API dependencies into a temporary prefix
 COPY pyproject.toml README.md ./
 COPY config ./config
 COPY loto ./loto
 COPY apps/api ./apps/api
 COPY demo ./demo
-RUN pip install --no-cache-dir -r apps/api/requirements.txt && \
-    pip install --no-cache-dir .
+RUN pip install --no-cache-dir --prefix=/install -r apps/api/requirements.txt \
+    && pip install --no-cache-dir --prefix=/install .
+
+# Final stage
+FROM python:3.12-slim
+WORKDIR /app
+
+# Copy installed packages and application source
+COPY --from=builder /install /usr/local
+COPY config ./config
+COPY loto ./loto
+COPY apps/api ./apps/api
+COPY demo ./demo
 
 # Create non-root user
 RUN useradd --create-home appuser && chown -R appuser /app
 USER appuser
 
 EXPOSE 8000
+
+HEALTHCHECK CMD python -c "import urllib.request,sys; urllib.request.urlopen('http://localhost:8000/healthz')" || exit 1
 
 CMD ["./apps/api/entrypoint.sh"]
