--- a/apps/maximo-extension-ui/package.json
+++ b/apps/maximo-extension-ui/package.json
@@ -54,6 +54,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "pdf-parse": "^1.1.1"
   }
 }
