Use tmpfs for demo SQLite DB

--- a/apps/api/alembic/alembic.ini
+++ b/apps/api/alembic/alembic.ini
@@ -1,6 +1,6 @@
 [alembic]
 script_location = apps/api/alembic
-sqlalchemy.url = sqlite:///./loto.db
+sqlalchemy.url = sqlite:////tmp/loto.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
