--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,18 @@ DATA_IN=data/in
 DATA_OUT=data/out
 RULEPACK_FILE=config/hswa_rules_v1.1.yaml
 
+# Planner weighting
+W_ALPHA=1.0
+W_BETA=5.0
+W_GAMMA=0.5
+W_DELTA=1.0
+W_EPSILON=2.0
+W_ZETA=0.5
+CB_SCALE=30.0
+CB_MAX=120.0
+RST_SCALE=30.0
+PLANNER_NODE_SPLIT=1
+
 # Sentry error reporting (optional)
 SENTRY_DSN=
 
