Rename HATS ranking docs and config to triage

--- a/.env.example
+++ b/.env.example
@@ -41,9 +41,9 @@ COUPA_APIKEY=changeme
 # Outbound egress allowlist (comma-separated hostnames)
 EGRESS_ALLOWED_HOSTS=example.com,coupa.example.com
 
-# HATS configuration
-HATS_LEDGER_PATH=hats_ledger.jsonl
-HATS_SNAPSHOT_PATH=hats_snapshot.json
+# Triage configuration
+TRIAGE_LEDGER_PATH=triage_ledger.jsonl
+TRIAGE_SNAPSHOT_PATH=triage_snapshot.json
 
 # OIDC configuration
 OIDC_CLIENT_ID=your-client-id
