--- a/apps/maximo-extension-ui/package.json
+++ b/apps/maximo-extension-ui/package.json
@@ -39,22 +39,23 @@
     "@testing-library/react": "^14.0.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.0.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.0",
+    "eslint-config-prettier": "^9.0.0",
     "jsdom": "^22.1.0",
+    "pdf-parse": "^1.1.1",
     "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
     "shadcn-ui": "^0.6.0",
     "storybook": "^7.6.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
-    "vitest": "^0.34.6",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.1.0",
-    "pdf-parse": "^1.1.1"
+    "vitest": "^0.34.6"
   }
 }
