--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -41,6 +41,7 @@ RUN apt-get update \
         libpangoft2-1.0-0 \
         libgdk-pixbuf-2.0-0 \
         fontconfig \
+        curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy installed packages and application source
@@ -56,6 +57,6 @@ USER appuser
 
 EXPOSE 8000
 
-HEALTHCHECK CMD python -c "import urllib.request,sys; urllib.request.urlopen('http://localhost:8000/healthz')" || exit 1
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 CMD curl --fail http://localhost:8000/healthz || exit 1
 
 CMD ["./apps/api/entrypoint.sh"]
