Increase container startup health check timeouts

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -57,6 +57,6 @@ USER appuser
 
 EXPOSE 8000
 
-HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 CMD curl --fail http://localhost:8000/healthz || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=90s --retries=3 CMD curl -fsS http://localhost:8000/healthz || exit 1
 
 CMD ["./apps/api/entrypoint.sh"]
